--- a/report.tex
+++ b/report.tex
@@ -253,5 +253,6 @@ Dans cette exercice nous avons utilise la méthode des kmeans pour classifier no
 
 
 
+\subsubsection{Mutations}
 
 \end{document}
