Quick check (report)

--- a/report.tex
+++ b/report.tex
@@ -260,7 +260,7 @@ Dans cette exercice nous avons utilisé la méthode des kmeans pour classifier n
 
 \subsubsection{Question 1: K=2}
 
-Nous effectuons plusieurs classifications (100 par exemple) des donnees de Crabs2. Nous remarquons la formations de deux classes essentiellement selon l'espece comme la figure ci -dessous. Parfois nous obtenons egalement une classification selon le sexe.
+Nous effectuons plusieurs classifications (100 par exemple) des données de Crabs2. Nous remarquons la formations de deux classes essentiellement selon l'espèce comme la figure ci -dessous. Parfois nous obtenons également une classification selon le sexe.
 \begin{center}
 	\includegraphics[width=45mm]{Figures/Crabs2_2/kmeans2_1.png}
 	\captionof{figure}{Representation  de Crabs2 en 2 classes}
@@ -280,7 +280,7 @@ Nous effectuons plusieurs classifications (100 par exemple) des donnees de Crabs
 	\captionof{figure}{Representation des donnees reelles de Crabs }
 	\label{fig:iris_kmeansReal}
 \end{center}
-En comparant les représentations de la classification en 4 classes et celle des données réelles, nous observons une similitude. Il s'agit de deux classifications en deux classes. Chaque classe représente une combinaison sexe-espèce différente 
+En comparant les représentations de la classification en 4 classes et celle des données réelles, nous observons une similitude. Il s'agit de deux classifications en deux classes. Chaque classe représente une combinaison sexe-espèce différente. 
 
 \subsection{Mutations}
 Après avoir réalisé l'AFTD pour réduire la dimension de nos jeux de données de 20 à 5, nous utilisons l'algorithme des centres mobiles pour classer les individus en 3 classes. Notons qu'avec 5 variables on explique 91\% des données.\\
